--- a/TaxingArchitecture/Tax.UserInterface/src/index.html
+++ b/TaxingArchitecture/Tax.UserInterface/src/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="utf-8">
-  <title>Tax.UserInterface</title>
+  <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+  <title>Calculadora de Imposto</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
-  <app-root></app-root>
+<body class="hold-transition skin-red layout-top-nav">
+  <app-root>Loading...</app-root>
 </body>
 </html>
