--- a/TaxingArchitecture/Tax.UserInterface/src/index.html
+++ b/TaxingArchitecture/Tax.UserInterface/src/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body class="hold-transition skin-red layout-top-nav">
+<body class="hold-transition skin-blue layout-top-nav">
   <app-root>Loading...</app-root>
 </body>
 </html>
